--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -753,10 +753,10 @@
   <!-- 主要代码 -->
   <div class="container">
     <!-- 友情提示片段 -->
-    <marquee direction="滚动方向" style="color: #eee;font-size: 1rem;">
+    <!-- <marquee direction="滚动方向" style="color: #eee;font-size: 1rem;">
       友情提示:该站点<b style="color: #ff0000;" id="siteVal"></b> 对<b style="color: #37bcce;"
         id="textVal"></b>,且本站群部分IP已进入谷歌黑名单,会弹出谷歌人机验证,出于技术原因,当前无解,所以请直接输入网址进行访问(重点)!如:www.youtube.com。<span id="vip"></span>
-    </marquee>
+    </marquee> -->
     <div class="search bar1">
       <h2 id="titleText"></h2>
       <section>
@@ -820,7 +820,7 @@
           rel="noopener noreferrer">jkgblog.com</a></span></div>
     <div class="right-cp">
       <span>Thanks: </span>
-      <a href="https://cdn.mfyidc.com/" target="_blank" rel="noopener noreferrer" title="蜜蜂云CDN"> mfyidc CDN</a> |
+      <!-- <a href="https://cdn.mfyidc.com/" target="_blank" rel="noopener noreferrer" title="蜜蜂云CDN"> mfyidc CDN</a> | -->
       <a href="https://developer.mozilla.org/zh-CN/docs/Web/API/Service_Worker_API" target="_blank"
         rel="noopener noreferrer" title="Service Worker">
         Service Worker</a>
