--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -823,8 +823,10 @@
 
   <!-- copyright -->
   <div class="footer-copyright">
-    <div><b>Copyright：</b><span>©2019-2021 | <a style="font-size: 1.2rem;" href="https://jkgblog.com" target="_blank"
-          rel="noopener noreferrer">jkgblog.com</a></span></div>
+    <div><b>Copyright：</b><span>©2019-2022 
+       <a style="font-size: 1.2rem;" href="#" target="_blank"
+          rel="noopener noreferrer"></a></span>
+        </div>
     <div class="right-cp">
       <span>Thanks: </span>
 
