--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -825,13 +825,12 @@
   <div class="alert">
     <ul>
       <li>此次更新版本为V 0.1.3，添加了几台服务器作为边缘网络</li>
-      <li>此次更新，经过测试在手机端95%以上不再弹出谷歌人机验证！请客官放心使用</li>
       <li>本项目支持输入域名访问！比如输入：www.redtube.com</li>
-      <li>本项目沙箱化，如果出现谷歌人机验证，请直接输入你想要去的网址</li>
+      <li>本项目沙箱化，谷歌人机验证无法解决，请直接输入你想要去的网址</li>
       <li>如果客官有任何问题，请及时与我联系：eschervip#gmail.com</li>
       <li>如果客官手里有闲钱，点击下右下角进行捐赠以解决服务器开销！</li>
     </ul>
-    <p style="text-align: center;" id="djs">10</p>
+    <p style="text-align: center;" id="djs">30</p>
   </div>
 
   <!-- 非法操作警告 -->
