--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -319,7 +319,7 @@
     .footer-copyright a {
       text-decoration: none;
       color: #0f0b01;
-      font-size: 0.9rem;
+      font-size: 1.2rem;
     }
 
     .footer-copyright a:hover {
@@ -848,7 +848,7 @@
       <h2>你想成为FreeStar吗</h2>
       <p>本站服务皆为了沙盒网站开发，目的是为了检测来源不明的可疑链接，如果你觉得本站对你有所帮助，
         我希望能够得到你的赞助，缓解本站服务器每月 <b style="color:#ff0000;">$25</b> 的高额支出，赞助金额看你喜欢！救救孩子吧~</p>
-      <img src="https://tk.jkgblog.com/images/2020/10/10/1602333007.md.jpg" alt="jkgblog.com">
+      <img src="https://s3.jpg.cm/2021/06/08/ILeah4.png" alt="jkgblog.com">
       <span id="closedD" title="不赞助"></span>
     </div>
   </div>
@@ -883,7 +883,7 @@
     <div><b>Copyright：</b><span>©2019-2022 | <a style="font-size: 1.2rem;" href="https://jkgblog.com" target="_blank"
           rel="noopener noreferrer">jkgblog.com</a></span></div>
 
-    <div><b>Copyright：</b><span>©2019-2022
+    <div><b>links:</b><span><a href="https://search.zmirror.xyz">Whoogle Search</a>
         <a style="font-size: 1.2rem;" href="#" target="_blank" rel="noopener noreferrer"></a></span>
     </div>
 
