--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -883,7 +883,7 @@
     <div><b>Copyright：</b><span>©2019-2022 | <a style="font-size: 1.2rem;" href="https://jkgblog.com" target="_blank"
           rel="noopener noreferrer">jkgblog.com</a></span></div>
 
-    <div><b>links:</b><span><a href="https://search.zmirror.xyz">Whoogle Search</a>
+    <div><b>links:</b><span><a href="https://google.fuckcloudnative.io/">Google mirror</a>
         <a style="font-size: 1.2rem;" href="#" target="_blank" rel="noopener noreferrer"></a></span>
     </div>
 
