--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -828,6 +828,7 @@
       <li>本项目支持输入域名访问！比如输入：www.redtube.com</li>
       <li>本项目沙箱化，谷歌人机验证无法解决，请直接输入你想要去的网址</li>
       <li>如果客官有任何问题，请及时与我联系：eschervip#gmail.com</li>
+      <li>底部的谷歌镜像服务器会休眠，第一次访问稍微慢了点</li>
       <li>如果客官手里有闲钱，点击下右下角进行捐赠以解决服务器开销！</li>
     </ul>
     <p style="text-align: center;" id="djs">30</p>
@@ -883,7 +884,7 @@
     <div><b>Copyright：</b><span>©2019-2022 | <a style="font-size: 1.2rem;" href="https://jkgblog.com" target="_blank"
           rel="noopener noreferrer">jkgblog.com</a></span></div>
 
-    <div><b>links:</b><span><a href="https://google.fuckcloudnative.io/">Google mirror</a>
+    <div><b>links:</b><span><a href="https://google.zmirror.xyz/">Google mirror</a>
         <a style="font-size: 1.2rem;" href="#" target="_blank" rel="noopener noreferrer"></a></span>
     </div>
 
