--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <!-- 本代码所有都是屎一样的，等我抽时间整理，以下所有函数简直是屎一样！！！ -->
+
 <head>
   <title>Public Sandbox Detection</title>
   <meta charset="utf-8">
@@ -513,11 +514,11 @@
       font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     }
 
-    .alert ul li{
+    .alert ul li {
       padding: 5px;
     }
 
-    .alert ul li:nth-child(6){
+    .alert ul li:nth-child(6) {
       color: #ff0000;
     }
 
@@ -829,7 +830,7 @@
       <li>本项目沙箱化，谷歌人机验证无法解决，请直接输入你想要去的网址</li>
       <li>如果客官有任何问题，请及时与我联系：eschervip#gmail.com</li>
       <li>底部的谷歌镜像服务器会休眠，第一次访问稍微慢了点</li>
-      <li>如果客官手里有闲钱，点击下右下角进行捐赠以解决服务器开销！</li>
+      <li>如果客官手里有闲钱，点击右下角进行捐赠以解决服务器开销！服务器流量快没了啊!!!</li>
     </ul>
     <p style="text-align: center;" id="djs">30</p>
   </div>
@@ -897,7 +898,11 @@
 
       <a href="https://developer.mozilla.org/zh-CN/docs/Web/API/Service_Worker_API" target="_blank"
         rel="noopener noreferrer" title="Service Worker">
-        Service Worker</a>
+        Service Worker</a> |
+      <!-- 服务器 -->
+      <img style="width: 1.4rem;height: 1.4rem;object-fit: cover;" src="https://i.jpg.dog/file/jpg-dog/1327194bb36352c9e4556e19729cb974.png"
+        alt="1327194bb36352c9e4556e19729cb974.png" border="0" />
+      <a href="https://www.vultr.com/?ref=8873419-6G" target="_blank" rel="noopener noreferrer">免费100美刀</a>
     </div>
     <div class="donate"><button id="donate"
         style="width: 50px;margin-top: 5px;border-radius: 10px;background-color: skyblue;" title="成为赞助商">捐赠</button>
