--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -885,7 +885,9 @@
     <div><b>Copyright：</b><span>©2019-2022 | <a style="font-size: 1.2rem;" href="https://jkgblog.com" target="_blank"
           rel="noopener noreferrer">jkgblog.com</a></span></div>
 
-    <div><b>links:</b><span><a href="https://google.zmirror.xyz/">Google mirror</a>
+    <div><b>links：</b><span><a href="https://google.zmirror.xyz/">Google mirror</a>
+        <a style="font-size: 1.2rem;" href="#" target="_blank" rel="noopener noreferrer"></a></span> |
+        <span><a href="https://status.zmirror.xyz/">Service Status</a>
         <a style="font-size: 1.2rem;" href="#" target="_blank" rel="noopener noreferrer"></a></span>
     </div>
 
@@ -900,7 +902,8 @@
         rel="noopener noreferrer" title="Service Worker">
         Service Worker</a> |
       <!-- 服务器 -->
-      <img style="width: 1.4rem;height: 1.4rem;object-fit: cover;" src="https://i.jpg.dog/file/jpg-dog/1327194bb36352c9e4556e19729cb974.png"
+      <img style="width: 1.4rem;height: 1.4rem;object-fit: cover;"
+        src="https://i.jpg.dog/file/jpg-dog/1327194bb36352c9e4556e19729cb974.png"
         alt="1327194bb36352c9e4556e19729cb974.png" border="0" />
       <a href="https://www.vultr.com/?ref=8873419-6G" target="_blank" rel="noopener noreferrer">免费100美刀</a>
     </div>
