--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -142,19 +142,23 @@
 
     @keyframes img {
       0% {
-        background-image: url("https://images.unsplash.com/photo-1567896079745-b0b7e5a47679?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
+        background-image: url("https://w.wallhaven.cc/full/8o/wallhaven-8oev1j.jpg");
+
       }
 
       40% {
-        background-image: url("https://images.unsplash.com/photo-1600935136963-847a8247946b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
+        background-image: url("https://w.wallhaven.cc/full/k7/wallhaven-k7zv97.jpg");
+
       }
 
       75% {
-        background-image: url('https://images.unsplash.com/photo-1534460396583-64f50cc94eeb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1052&q=80');
+        background-image: url('https://w.wallhaven.cc/full/j3/wallhaven-j3wqo5.png');
+
       }
 
       100% {
         background-image: url("https://images.unsplash.com/photo-1528164344705-47542687000d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1069&q=80");
+
       }
     }
 
@@ -182,15 +186,15 @@
       filter: blur(1.2px);
       transform: scale(1.03);
       z-index: -1;
-      animation: img 10s ease-in-out infinite;
+      animation: img 40s ease-in-out infinite;
     }
 
     .container {
       width: 100%;
       height: 100vh;
       position: relative;
-      filter: hue-rotate(90deg);
-      animation: animate 8s linear infinite;
+      /* filter: hue-rotate(90deg); */
+      /* animation: animate 8s linear infinite; */
       /* display: none; */
     }
 
@@ -887,7 +891,7 @@
 
     <div><b>links：</b><span><a href="https://google.zmirror.xyz/">Google mirror</a>
         <a style="font-size: 1.2rem;" href="#" target="_blank" rel="noopener noreferrer"></a></span> |
-        <span><a href="https://status.zmirror.xyz/">Service Status</a>
+      <span><a href="https://status.zmirror.xyz/">Service Status</a>
         <a style="font-size: 1.2rem;" href="#" target="_blank" rel="noopener noreferrer"></a></span>
     </div>
 
