--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -174,7 +174,7 @@
       https://acg.yanwz.cn/wallpaper/api.php
       https://api.btstu.cn/sjbz/?lx=dongman
        */
-      background-image: url('https://images.unsplash.com/photo-1606230144598-ed5d503a4c43?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80');
+      background-image: url('https://blog.lx101.cn/usr/uploads/2021/06/1453246070.jpg');
       height: 100vh;
       /* background-image: radial-gradient(red 5%, yellow 15%, green 60%); */
       background-size: cover;
@@ -183,10 +183,10 @@
       -moz-background-size: cover;
       -o-background-size: cover;
       -webkit-background-size: cover;
-      filter: blur(1.2px);
+      filter: blur(1px);
       transform: scale(1.03);
       z-index: -1;
-      animation: img 40s ease-in-out infinite;
+      /* animation: img 40s ease-in-out infinite; */
     }
 
     .container {
