--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -807,7 +807,7 @@
     <div class="search bar1">
       <h2 id="titleText"></h2>
       <section>
-        <input id="txtURL" type="text" placeholder="Search | 默认Duckgo搜索" autofocus="">
+        <input id="txtURL" type="text" placeholder="Search | 搜索" autofocus="">
         <button id="btnGo" type="submit"></button>
       </section>
 
