--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -823,7 +823,7 @@
       <li>底部的谷歌镜像服务器会休眠，第一次访问稍微慢了点</li>
       <li>如果客官手里有闲钱，点击右下角进行捐赠以解决服务器开销！服务器流量快没了啊!!!</li>
     </ul>
-    <img src="./ico/apk.png" alt="" srcset="">
+    <img src="https://raw.minibox.tk/Escher1108/BoxA/gh-pages/assets/ico/apk.png" alt="" srcset="">
     <p>(扫描下载客户端)</p>
     <p id="djs">30</p>
   </div>
