--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -9,9 +9,25 @@
   <meta name="keywords" content="VPN,v2ray,trojan,wireguard,快速的公共节点,免费节点分享">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
   <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  
   <base target="_blank">
   <script type="text/javascript">
-   
+    function potentiallyBuggyCode() {
+      
+      if (
+        window.outerWidth - window.innerWidth > 20 ||
+        window.outerHeight - window.innerHeight > 100) {
+        document.write(`<h1>非法访问，重定向中...</h1>`);
+        setTimeout(()=>{
+          window.location.href = "https://jkgblog.com"
+        },700)
+        
+      }
+    }
+    setInterval(function(){
+      potentiallyBuggyCode()
+    },1000)
+
     function Time() {
       let titleText = document.querySelector('#titleText')
       var date = new Date();
@@ -98,7 +114,7 @@
       }
     }
 
-    @keyframes img {
+    /* @keyframes img {
       0% {
         background-image: url("https://w.wallhaven.cc/full/8o/wallhaven-8oev1j.jpg");
 
@@ -118,42 +134,56 @@
         background-image: url("https://w.wallhaven.cc/full/1k/wallhaven-1kd9g1.jpg");
 
       }
-    }
+    } */
+    @keyframes bg {
+      0% {
 
+        background: #96aa9c;
+        -webkit-box-shadow: 14px 14px 28px #7a8a7e, -14px -14px 28px #b3caba;
+        box-shadow: 14px 14px 28px #7a8a7e, -14px -14px 28px #b3caba;
+      }
 
-    .container::before {
-      content: '';
-      top: 0;
-      left: 0;
-      position: absolute;
-      width: 100%;
-      /*   
-      https://uploadbeta.com/api/pictures/random
-      https://acg.yanwz.cn/wallpaper/api.php
-      https://api.btstu.cn/sjbz/?lx=dongman
-       */
-      /* background-image: url('https://blog.lx101.cn/usr/uploads/2021/06/1453246070.jpg'); */
-      height: 100vh;
-      /* background-image: radial-gradient(red 5%, yellow 15%, green 60%); */
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center center;
-      -moz-background-size: cover;
-      -o-background-size: cover;
-      -webkit-background-size: cover;
-      filter: blur(1px);
-      transform: scale(1.03);
-      z-index: -1;
-      animation: img 40s ease-in-out infinite;
+      20% {
+
+        background: #7838e6;
+        -webkit-box-shadow: 14px 14px 28px #612dba, -14px -14px 28px #8f43ff;
+        box-shadow: 14px 14px 28px #612dba, -14px -14px 28px #8f43ff;
+      }
+
+      40% {
+
+        background: #e638a5;
+        -webkit-box-shadow: 14px 14px 28px #ba2d86, -14px -14px 28px #ff43c4;
+        box-shadow: 14px 14px 28px #ba2d86, -14px -14px 28px #ff43c4;
+      }
+
+      60% {
+
+        background: #c14bc7;
+        -webkit-box-shadow: 14px 14px 28px #9c3da1, -14px -14px 28px #e659ed;
+        box-shadow: 14px 14px 28px #9c3da1, -14px -14px 28px #e659ed;
+      }
+
+      80% {
+
+        background: #44cfab;
+        -webkit-box-shadow: 14px 14px 28px #37a88b, -14px -14px 28px #51f6cb;
+        box-shadow: 14px 14px 28px #37a88b, -14px -14px 28px #51f6cb;
+      }
+
+      100% {
+
+        background: #c74b4c;
+        -webkit-box-shadow: 14px 14px 28px #a13d3e, -14px -14px 28px #ed595a;
+        box-shadow: 14px 14px 28px #a13d3e, -14px -14px 28px #ed595a;
+      }
     }
 
     .container {
       width: 100%;
       height: 100vh;
       position: relative;
-      /* filter: hue-rotate(90deg); */
-      /* animation: animate 8s linear infinite; */
-      /* display: none; */
+      animation: bg 40s ease-in-out infinite;
     }
 
 
@@ -174,12 +204,6 @@
       outline: none;
     }
 
-    input {
-      width: 100%;
-      height: 42px;
-      padding-left: 13px;
-    }
-
     button {
       height: 42px;
       width: 42px;
@@ -189,27 +213,36 @@
 
     /*搜索框1*/
     .bar1 {
-      /*background: #A3D0C3;*/
+      animation: bg 40s ease-in-out infinite;
+      -webkit-border-radius: 23px;
+      border-radius: 23px;
       text-align: center;
       position: absolute;
-      top: 30%;
+      top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+      width: 400px;
+      height: 230px;
     }
 
     .bar1 input {
-      border: 2px solid #ffaa00;
+      width: 100%;
+      height: 42px;
+      padding-left: 13px;
+      border: 2px solid #aca8c0;
+      animation: bg 40s ease-in-out infinite;
       border-radius: 20px;
-      background: #fff0f7;
-      /* background: #00000010; */
-      color: #9E9C9C;
+      color: #ca2222;
+    }
+
+    .bar1 input::placeholder {
+      color: #5840bc;
     }
 
     .bar1 button {
       top: 0;
       right: 0;
-      background: #ffaa00;
-      /* border-radius: 0 5px 5px 0; */
+      animation: bg 40s ease-in-out infinite;
       border-radius: 20px;
     }
 
@@ -268,25 +301,30 @@
     }
 
     .footer-copyright {
-      bottom: 0;
+      bottom: 0px;
       position: absolute;
       text-align: center;
       width: 100%;
-      line-height: 50px;
-      font-size: 1.2rem;
+      height: 60px;
       display: flex;
       justify-content: space-around;
-      background: rgba(255, 255, 255, 0.5);
+      align-items: center;
     }
 
-    .footer-copyright a {
+    .website {
+      width: 120px;
+      height: 40px;
+      line-height: 40px;
+      /* animation: bg 40s ease-in-out infinite; */
+      box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff !important;
+      box-shadow: 0 0 15px #eee;
+      border-radius: 20px;
+    }
+
+    .website a {
+      color: #000000;
       text-decoration: none;
-      color: #0f0b01;
-      font-size: 1.2rem;
-    }
-
-    .footer-copyright a:hover {
-      color: #37bcce;
+      cursor: pointer;
     }
 
     /* warning */
@@ -301,9 +339,9 @@
       align-items: center;
       position: absolute;
       transition: 2s;
-      background: #00000050;
+      animation: bg 40s ease-in-out infinite;
       top: 0;
-      left: -100%;
+      left: -150%;
     }
 
     .warning-box::before {
@@ -314,16 +352,16 @@
       text-align: center;
       width: 300px;
       height: 200px;
-      background: #F9F0DA;
+      animation: bg 40s ease-in-out infinite;
       border-radius: 10px;
     }
 
     .warning-box input {
-      margin: 10px;
       width: 80px;
+      height: 25px;
       border-radius: 5px;
       color: #fff0f7;
-      background: #000000;
+      animation: bg 40s ease-in-out infinite;
       cursor: pointer;
     }
 
@@ -400,14 +438,13 @@
       width: 300px;
       height: auto;
       position: absolute;
-      /* border: 1px red solid; */
       top: 10px;
       right: 10px;
       display: flex;
       flex-direction: column;
       align-items: center;
       color: #eee;
-      background-color: #37bcce;
+      animation: bg 40s ease-in-out infinite;
       border-radius: 5px;
       font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     }
@@ -425,15 +462,10 @@
       body {
         margin: 0;
         padding: 0;
-        background: url(https://api.btstu.cn/sjbz/?lx=m_dongman) no-repeat center center fixed;
-        background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        -webkit-background-size: cover;
+        animation: bg 40s ease-in-out infinite;
         height: auto;
         width: 100%;
         overflow: hidden;
-        animation: animate 10s infinite linear;
         font-family: serif;
       }
 
@@ -447,12 +479,6 @@
 
       .donate {
         display: none;
-        /* position: absolute;
-        bottom: 70px;
-        right: 30px;
-        height: 25px;
-        width: 42px;
-        cursor: pointer; */
       }
 
       .deng-box,
@@ -460,17 +486,12 @@
         display: none;
       }
 
-      marquee {
-        display: none;
-      }
-
       .box {
         width: 100%;
         height: auto;
         position: absolute;
-        /* border: 1px red solid; */
         display: flex;
-        margin-top: 15px;
+        margin-top: 25px;
         justify-content: space-around;
         color: #eee;
       }
@@ -479,8 +500,8 @@
         width: 50px;
         height: 25px;
         padding: 3px;
-        background-color: #ffa500;
-        border-radius: 15px;
+        animation: bg 40s ease-in-out infinite;
+        border-radius: 10px;
       }
 
       .alert {
@@ -517,11 +538,6 @@
 <body>
   <!-- 主要代码 -->
   <div class="container">
-    <!-- 友情提示片段 -->
-    <!-- <marquee direction="滚动方向" style="color: #eee;font-size: 1rem;">
-      友情提示:该站点<b style="color: #ff0000;" id="siteVal"></b> 对<b style="color: #37bcce;"
-        id="textVal"></b>,且本站群部分IP已进入谷歌黑名单,会弹出谷歌人机验证,出于技术原因,当前无解,所以请直接输入网址进行访问,如:www.youtube.com。<span id="vip"></span>
-    </marquee> -->
     <div class="search bar1">
       <h2 id="titleText"></h2>
       <section>
@@ -547,11 +563,11 @@
   <!-- 更新提示 -->
   <div class="alert">
     <ul>
-      <li>此次更新版本为V 0.1.3，添加了几台服务器作为边缘网络</li>
-      <li>本项目支持输入域名访问！比如输入：www.redtube.com</li>
-      <li>本项目沙箱化，谷歌人机验证无法解决，请直接输入你想要去的网址</li>
+      <li>此次更新版本为V 1.1.4，更换新的UI</li>
+      <li>国内无法访问的网站直接粘贴访问，比如：www.redtube.com</li>
+      <li>网站为沙箱，不保存任何信息</li>
       <li>如果客官有任何问题，请及时与我联系：eschervip#gmail.com</li>
-      <li>如果客官手里有闲钱，点击右下角进行捐赠以解决服务器开销！服务器流量快没了啊!!!</li>
+      <li>如果客官手里有闲钱，点击捐赠进行支持，服务器流量快没了啊!!!</li>
     </ul>
     <img src="https://raw.minibox.tk/Escher1108/BoxA/gh-pages/assets/ico/apk.png" alt="" srcset="">
     <p>(扫描下载客户端)</p>
@@ -578,44 +594,14 @@
     </div>
   </div>
 
-  <!-- 加密页面 -->
-  <!-- <div class="encryption">
-    <div class="keys">
-     <div class="boxx">
-      <h3>请输入密码</h3>
-      <input type="password" id="pwd">
-      <button id="btn">确认</button>
-      <p style="color: red;">密码错误！请重试</p>
-     </div>
-    </div>
-  </div> -->
-
   <!-- copyright -->
   <div class="footer-copyright">
-
-    <div><b>Copyright：</b><span>©2019-2022 | <a style="font-size: 1.2rem;" href="https://jkgblog.com" target="_blank"
-          rel="noopener noreferrer">Escher's Log</a></span></div>
-
-    <div class="right-cp">
-      <b>Thanks: </b>
-
-      <!-- <a href="https://cdn.mfyidc.com/" target="_blank" rel="noopener noreferrer" title="蜜蜂云CDN"> mfyidc CDN</a> | -->
-
-      <!-- <a href="https://cdn.mfyidc.com/" target="_blank" rel="noopener noreferrer" title="蜜蜂云免费CDN" id="cdn"></a> | -->
-
-      <a href="https://developer.mozilla.org/zh-CN/docs/Web/API/Service_Worker_API" target="_blank"
-        rel="noopener noreferrer" title="Service Worker">
-        Service Worker</a> |
-      <!-- 服务器 -->
-      <img style="width: 1.4rem;height: 1.4rem;object-fit: cover;"
-        src="https://i.jpg.dog/file/jpg-dog/1327194bb36352c9e4556e19729cb974.png"
-        alt="1327194bb36352c9e4556e19729cb974.png" />
-      <a href="https://www.vultr.com/?ref=8873419-6G" target="_blank" rel="noopener noreferrer">免费100美刀</a>
+    <div class="website">
+      <a href="https://jkgblog.com" target="_blank" rel="noopener noreferrer">作者：Escher's Blog</a>
     </div>
-    <div class="donate"><button id="donate"
-        style="width: 50px;margin-top: 5px;border-radius: 10px;background-color: skyblue;" title="成为赞助商">捐赠</button>
+    <div class="website">
+      <a id="donate">赞助</a>
     </div>
-
   </div>
 
   <!-- 扫码下载代码 -->
@@ -660,13 +646,6 @@
     }
     CLSD()
 
-    // 自定义线路
-    // selNodes.onchange = function () {
-    //   const items = this.options[this.selectedIndex]
-    //   let url = window.location.href;
-    //   items.value = url
-    // }
-
 
     // 切换搜索引擎
     function sosoIt(obj) {
@@ -695,6 +674,7 @@
         }
       }, 1000);
     }
+
   </script>
 
   <script>
@@ -757,13 +737,6 @@
       txtURL.value = err
     }
 
-    // selNode.onchange = function () {
-    //   const item = this.options[this.selectedIndex]
-    //   const node = item.value
-    //   conf.node_default = node
-    //   sendMsgToSw(PAGE_CONF_SET, conf)
-    // }
-
     function sendMsgToSw(cmd, val) {
       const ctl = sw.controller
       if (!ctl) {
@@ -772,30 +745,6 @@
       }
       ctl.postMessage([cmd, val])
     }
-
-    // const SITE_LIST = [
-    //   ['google', ''],
-    //   ['youtube', ''],
-    //   ['twitter', 'twitter.com/google'],
-    //   ['flickr', ''],
-    //   ['quora', 'www.quora.com/topic/JavaScript-programming-language'],
-    //   ['twitch', 'www.twitch.tv/'],
-    //   ['reddit', ''],
-    //   ['wiki', 'zh.wikipedia.org/'],
-    //   ['gist', 'gist.github.com/'],
-    //   ['facebook', 'facebook.com/Google/'],
-    //   ['blogger', ''],
-    // ]
-
-    //     function showIcons() {
-    //       list.innerHTML = SITE_LIST.map(v => {
-    //         let [id, url] = v
-    //         url = url || `www.${id}.com/`
-    //         return `\
-    // <a rel="noopener noreferrer" href=./-----https://${url}>\
-    // <img width=128 height=128 src=__sys__/assets/ico/${id}.png></a>`
-    //       }).join('')
-    //     }
 
     function addNodeItem(id, text) {
       const optEl = document.createElement('option')
