--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -602,6 +602,9 @@
     <div class="website">
       <a id="donate">赞助</a>
     </div>
+    <div class="website">
+      <a href="https://t.me/Jsproxy" target="_blank">TG@Jsproxy</a>
+    </div>
   </div>
 
   <!-- 扫码下载代码 -->
