--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -25,7 +25,7 @@
       }
     }
     setInterval(function(){
-      potentiallyBuggyCode()
+      // potentiallyBuggyCode()
     },1000)
 
     function Time() {
