--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -772,15 +772,8 @@
     }
 
   </script>
-<script>
-  var _hmt = _hmt || [];
-  (function() {
-    var hm = document.createElement("script");
-    hm.src = "https://hm.baidu.com/hm.js?27cdd3520da4090bb77c4c83ab21af25";
-    var s = document.getElementsByTagName("script")[0]; 
-    s.parentNode.insertBefore(hm, s);
-  })();
-  </script>
+  <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+  <script>LA.init({id: "JUw1G6nZmii1ioa1",ck: "JUw1G6nZmii1ioa1"})</script>
   
 </body>
 
