--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -792,7 +792,7 @@
         alert("违法站点，将重定向到安全站点！")
       }
       if (text) {
-        const url = './aHR0cHM6Ly9qa2dibG9nLmNvbQ==' + text;
+        const url = './-----' + text;
         open(url, '_blank', 'noopener,noreferrer')
       }
     }
